@@ -9,10 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>25</maven.compiler.source>
-        <maven.compiler.target>25</maven.compiler.target>
+        <maven.compiler.release>25</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <skipDependencyCopy>true</skipDependencyCopy>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.han-yaeger</groupId>
@@ -20,6 +21,7 @@
             <version>2024.2025</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -28,18 +30,17 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>nl.han.jefmk.EleSlime</mainClass>
-                    <options>
-                        <option>--enable-native-access=javafx.graphics,javafx.media</option>
-                        <option>-Djavafx.media.overridenativelib=true</option>
-                        <option>--add-opens=java.base/sun.misc=ALL-UNNAMED</option>
-                    </options>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
     <profiles>
         <profile>
             <id>arm</id>
+            <properties>
+                <skipDependencyCopy>false</skipDependencyCopy>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>com.google.inject</groupId>
@@ -62,6 +63,7 @@
                                 </goals>
                                 <configuration>
                                     <outputDirectory>${project.build.directory}/modules</outputDirectory>
+                                    <skip>${skipDependencyCopy}</skip>
                                 </configuration>
                             </execution>
                         </executions>
@@ -71,8 +73,8 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.11.0</version>
                         <configuration>
-                            <source>25</source>
-                            <target>25</target>
+                            <source>21</source>
+                            <target>21</target>
                             <compilerArgs>
                                 <arg>--module-path</arg>
                                 <arg>/home/justi/.m2/repository/com/github/han-yaeger/yaeger/2024.2025/yaeger-2024.2025.jar</arg>
@@ -96,4 +98,5 @@
             </build>
         </profile>
     </profiles>
+
 </project>
